OtoFileManager: Add feature about seafile
Although there are still several issues in seefile.

Signed-off-by: Wang Zhixu <potatomagic@163.com>
Signed-off-by: Chen Gang <chengang@emindsoft.com.cn>